--- a/style.css
+++ b/style.css
@@ -12,4 +12,9 @@ body {
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
 }
+.principal {
+    background-image: url("img/Background.png");
+}
+.container {
+    height: 100vh;
 }
