--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
+    --fonte-principal: 'Inter';
 }
 * {
     margin: 0;
@@ -11,6 +12,13 @@
 body {
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
+    background-color: var(--cor-de-fundo);
+    color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
+    }
+    
 }
 .principal {
     background-image: url("img/Background.png");
@@ -32,4 +40,8 @@ body {
 .botao_secundario {
     background-color: transparent;
     border: 2px solid var(--branco-principal)
+}
+.container__aviso {
+    font-size: 12px;
+    color: var(--cinza-secundario);
 }
