--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
     color: var(--branco-principal);
     display: block;
     text-decoration: none;
+    margin-bottom: 1em;
 }
 .botao_secundario {
     background-color: transparent;
@@ -46,3 +47,7 @@ body {
     font-size: 12px;
     color: var(--cinza-secundario);
 }
+.container__imagem {
+    margin: 1em 0 2em 0;
+}
+
