--- a/style.css
+++ b/style.css
@@ -5,31 +5,26 @@
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter';
 }
-* {
-    margin: 0;
-    padding: 0;
-}
+
 body {
-    background-color: var(--cor-de-fundo);
-    color: var(--branco-principal);
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
     font-family: var(--fonte-principal);
     font-size: 16px;
     font-weight: 400;
-    }
-    
+}
+* {
+    margin: 0;
+    padding: 0;
 }
 .principal {
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
+    text-align: center;
 }
-.container {
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 50% 50%;
-}
+
 .container__botao {
     background-color: var(--botao-azul);
     border-radius: 5px;
@@ -39,9 +34,16 @@ body {
     text-decoration: none;
     margin-bottom: 1em;
 }
+.container {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
 .botao_secundario {
     background-color: transparent;
-    border: 2px solid var(--branco-principal)
+    border: 2px solid var(--branco-principal);
+    display: block;
+    text-decoration: none;
 }
 .container__aviso {
     font-size: 12px;
@@ -50,7 +52,23 @@ body {
 .container__imagem {
     margin: 1em 0 2em 0;
 }
+
 .container__caixa {
     margin: 0 6em;
 }
-
+.secundario__imagem {
+    width: 80%;
+}
+.secundario {
+    align-items: center;
+    margin: 0 10em;
+}
+.descricao__titulo {
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
+}
+.descricao__texto {
+    color: var(--cinza-secundario);
+}
